--- a/HTML/temp.html
+++ b/HTML/temp.html
@@ -5,44 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="../CSS/register.css">
+    <link rel="stylesheet" href="../CSS/chat.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div class="register-container">
-        <div class="aside-right">
-            <div class="header">
-                <h3>Chat Room</h3>
-            </div>
-            <form id="register-form">
-                <div class="input-name-wrapper">
-                    <div class="input-wrapper">
-                        <input type="text" name="first-name" placeholder="First name">
-                        <div class="error" id="first_name-error"></div>
-                    </div>
-                    <div class="input-wrapper">
-                        <input type="text" name="last-name" placeholder="Last name">
-                        <div class="error" id="last_name-error"></div>
-                    </div>
-                </div>
-                <div class="input-wrapper">
-                    <input type="text" placeholder="Email" name="email">
-                    <div class="error" id="email-error"></div>
-                </div>
-                <div class="input-wrapper">
-                    <input type="password" placeholder="Password" name="password">
-                    <div class="error" id="password-error"></div>
-                </div>
-                <div class="input-wrapper">
-                    <input type="password" placeholder="Confirm Password" name="confirm-password">
-                    <div class="error" id="confirm-error"></div>
-                </div>
-                <div class="form-action">
-                    <span id="redirect-to-login">Already have an account? Login</span>
-                    <button class="btn" type="submit">Register</button>
-                </div>
-            </form>
-            </div>
-        </div>
+<div class="create-conversation-container">
+    <div class="header">
+        MindX Chat
     </div>
+    <div class="main" style="padding: 50px 20%;">
+        <form id="create-conversation-form">
+            <div>
+                Create a new conversation
+            </div>
+            <div class="input-wrapper">
+                <input type="text" placeholder="Conversation name" name="conversationTitle">
+                <div class="error" id="conversation-name-error"></div>
+            </div>
+            <div class="input-wrapper">
+                <input type="text" placeholder="Friend email" name="conversationEmail">
+                <div class="error" id="conversation-email-error"></div>
+            </div>
+            <button class="btn" type="submit">Save</button>
+            <button class="btn btn-light" type="button" id="back-to-chat">Cancel</button>
+        </form>
+    </div>
+</div>
+
 </body>
 </html>
